[metadata]
name = GIData
version = 0.0a0.dev0
author = Jason Fan
author_email = jasonfan@cs.umd.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.5
setup_requires =
    pytest-runner
    setuptools >=38.3     # version with most `setup.cfg` bugfixes
install_requires =
    pandas
    cloudpickle
    numpy

tests_require =
    pytest

[aliases]
test=pytest

[tool:pytest]
testpaths = tests